flickering fixed maybe? check

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 html,body {
     overflow-y: hidden;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 
